fix: Pre tag adds auto-wrap

--- a/ui/src/components/JsonView/index.less
+++ b/ui/src/components/JsonView/index.less
@@ -50,6 +50,7 @@
 
 .pre {
   margin: 0;
+  white-space: pre-wrap;
 }
 
 .jsonViewArrayItem {
